            - Link Hovering: Shows the tooltip of eg a Achivment while hovering
    - Added a new "Role Bar" which shows your group or raid's role composition
    - Added a new "Missing Raud Buff Bar" which shows you your missing raind buffs. You can also track one custom buff
    - Added tooltipt to the "Important Debuff" Dropdown
    - Added Season 2 "Important Debuffs"
    - Merchant skin

FIXES
    - Display Animapower frame in M+ and raids correctly
    - Fix a lua error in Torghast
    - Small layout fixes

5.16.4
FIXES
    - Social tab fixes

5.16.3
FIXES
    - Gossip skin issue
    - Smaller fixes

5.16.2
FIXES
    - Gossip skin issue
    - Issue with bag bars
    - Some Torghast issues

5.16.1
FIXES
    - Torghast tracker fixes

5.16.0
NEW
    - Added social module
    - Added option to show a additional ressourcebar with player as target frame
    - Added option to show party Partyframes
    - Added option to show pets portrait damage
    - Added option to show pet auras below the frame
    - Added option to show M+ score at unit tooltips (Based on Blizzards new score API)
    - Added preview mode for party and raidframes

FIXES
    - Redo raid frame aura icon tooltip: New option to set when the aura get a tooltip on mouse over or is click through (no tooltip = click through)
    - Healtglobe now works with mouseover addons

MISC
    - Updated raid debuffs for Sanctum of Domination (All difficulties)  
    - Updated raid debuffs for Tazavesh, the Veiled Market (Mythic) 

5.15.5
FIXES
    - Fix a tooltip lua error

5.14.4
FIXES
    - Fix microbar lua error

5.14.3
FIXES
    - Fix stancebar issue
    - Fix group layout

5.14.2
FIXES
    - Fix buff layout issue

5.14.1
FIXES
    - Fix a group layout issue

5.14.0
NEW
    - Make stancebar movable and let you choose the grow direction
    - Added option to override addon conflict behaivor
    - Ctrl. + click the countdown button (raid control) to trigger the dbm pull timer

FIXES