@@ -19,6 +19,9 @@ NEW
     - Added tooltipt to the "Important Debuff" Dropdown
     - Added Season 2 "Important Debuffs"
     - Merchant skin
+    - Added grid layouts for raid and party
+    - Added option to set a scale value for important dungeon and raid debuffs
+    - Added option to set a scale value for dispellable debuffs
 
 FIXES
     - Display Animapower frame in M+ and raids correctly
