@@ -395,3 +395,5 @@ L["Custom buff"] = "Eigener Buff"
 L["Enter the spell ID of the buff you wish to track. Only one spell ID is supported. To find the spell ID of the buff you want to track, enable IDs in the tooltip settings and mouse over the icon in your aura bar."] = "Gebe die Zauber-ID des Buffs ein, welchen du verfolgen möchtest. Es wird nur eine Zauber-ID unterstützt. Um die Zauber-ID des Buffs zu finden, den du verfolgen möchtest, aktiviere die ID's  in den Tooltip-Einstellungen und führe die Maus über den Buff in der Aura-Leiste."
 L["Hide Editbox"] = "Chateingabefeld verstecken"
 L["Hide the chat editbox when not in focus."] = "Verstecke das Chateingabefeld, wenn es keinen Fokus hat"
+L["Set important Dungeon & Raid debuff scale"] = "Setze die Skalierung für wichtige Instanz & Schlachtzug Debuffs"
+L["Set dispellable debuff scale"] = "Setze die Skalierung für bannbare Debuffs"
