@@ -513,6 +513,9 @@ GW_DEFAULT["PARTY_PLAYER_FRAME"] = false
 GW_DEFAULT["PARTY_SHOW_PETS"] = false
 GW_DEFAULT["FADE_GROUP_MANAGE_FRAME"] = false
 
+GW_DEFAULT["RAIDDEBUFFS_Scale"] = 1
+GW_DEFAULT["DISPELL_DEBUFFS_Scale"] = 1
+
 GW_DEFAULT["AUTO_REPAIR"] = "NONE"
 GW_DEFAULT["HUD_SCALE"] = 1
 GW_DEFAULT["MINIMAP_SCALE"] = 170
